Fix guy sliding, white background on mobile

--- a/src/components/FAQAccordion/style.module.scss
+++ b/src/components/FAQAccordion/style.module.scss
@@ -18,7 +18,7 @@
 }
 
 .accordionRoot {
-  background-color: transparent;
+  background-color: transparent !important;
   border-top: 1px solid vars.$neutral;
 
   &:before {
